kubernetes/final/front/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamlit-app-deployment
  labels:
    app: streamlit-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streamlit-app
  template:
    metadata:
      labels:
        app: streamlit-app
    spec:
      containers:
      - name: streamlit-app
        image: suhoj/thesis-front:1.0.0
        ports:
        - containerPort: 8501
