kubernetes/final/front/front-service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: streamlit-app-service
# spec:
#   selector:
#     app: streamlit-app
#   ports:
#     - protocol: TCP
#       port: 80
#       targetPort: 8501
#   type: LoadBalancer


apiVersion: v1
kind: Service
metadata:
  name: streamlit-app-service
  namespace: dev # Specify your namespace if needed
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  type: LoadBalancer
  selector:
    app: streamlit-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8501
